--- a/Main/mainPage.html
+++ b/Main/mainPage.html
@@ -285,6 +285,9 @@
       <a class="home-link" href="mainPage.html">Home</a>
       <a class="signUp-link" href="index.html">Sign Up</a>
       <a class="login-link" href="login.html">Login</a>
+      <a class="story-link" href="MapFoodStory.html">Story</a>
+      <a class="recipe-link" href="MapRecipe.html">Recipes</a>
+      <a class="restaurant-link" href="MapRestaurant.html">Restaurants</a>
       <a class="jsocialIndex-link" href="jsocialIndex.html">Share</a>
       <a class="aboutus-link" href="aboutUs.html">About Us</a>
     </div>
