updated new github link

--- a/Main/jsocialIndex.html
+++ b/Main/jsocialIndex.html
@@ -125,7 +125,7 @@
   <script>
     $("#share").jsSocials({
       // url: "http://bit.ly/codegrind",
-      url: "https://www.instagram.com/tas.tetrip?igsh=ZTI0bDNkYXAwMzdl&utm_source=qr",
+      url: "https://ivanlxy04.github.io/tastetrip-malaysian-cuisines/Main/index.html",
       text: "Check out TASTETRIP for more delicacy!",
       showLabel: false,
       shares: [
