--- a/Main/jsocialIndex.html
+++ b/Main/jsocialIndex.html
@@ -125,8 +125,9 @@
   <script>
     $("#share").jsSocials({
       // url: "http://bit.ly/codegrind",
-      url: "https://ivanlxy04.github.io/tastetrip-malaysian-cuisines/Main/index.html",
+      //url: "https://ivanlxy04.github.io/tastetrip-malaysian-cuisines/Main/index.html",
       text: "Check out TASTETRIP for more delicacy!",
+      url: "https://ivanlxy04.github.io/tastetrip-malaysian-cuisines/Main/index.html",
       showLabel: false,
       shares: [
         "twitter",
