--- a/Main/recipeJohor.html
+++ b/Main/recipeJohor.html
@@ -524,7 +524,7 @@
             </div>
 
             <div class="recipe-card">
-                <img src="image/Chicken Chop.jpg" alt="Chicken Chop">
+                <img src="image/Chicken chop.jpg" alt="Chicken Chop">
                 <h3>Chicken Chop</h3>
                 <div class="info">
                     <span>45 mins</span> 
@@ -534,7 +534,7 @@
             </div>
 
             <div class="recipe-card">
-                <img src="image/Curry Fish Head.jpg" alt="Curry Fish Head">
+                <img src="image/Curry Fish head.jpg" alt="Curry Fish Head">
                 <h3>Curry Fish Head</h3>
                 <div class="info">
                     <span>30 mins</span> 
