--- a/Main/Restaurant_Kedah.html
+++ b/Main/Restaurant_Kedah.html
@@ -355,7 +355,7 @@
                         <p><strong>Phone:</strong> 012-409 6360</p><br>
                     </div> 
                 
-                    <img src="image\nasilemakroyale.jpg" alt="nasilemakroyale" width="800" height="500" class="restaurant-image"> 
+                    <img src="image\NasiLemakRoyale.jpg" alt="nasilemakroyale" width="800" height="500" class="restaurant-image"> 
                 
                     <br><br><br><br>
 
