--- a/Main/recipeSarawak.html
+++ b/Main/recipeSarawak.html
@@ -504,7 +504,7 @@
 
         <div class="recipe-grid">
             <div class="recipe-card">
-                <img src="image/kolo mee.jpg" alt="kolo mee">
+                <img src="image/Kolo mee.jpg" alt="kolo mee">
                 <h3>kolo mee</h3>
                 <div class="info">
                     <span>10 mins</span>  
@@ -524,7 +524,7 @@
             </div>
 
             <div class="recipe-card">
-                <img src="image/Tomato Kueh tiaw.jpg" alt="Tomato Kueh tiaw">
+                <img src="image/Tomato Kueh Tiaw.jpg" alt="Tomato Kueh tiaw">
                 <h3>Tomato Kueh tiaw</h3>
                 <div class="info">
                     <span>30 mins</span> 
