--- a/Main/MapFoodStory.html
+++ b/Main/MapFoodStory.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Malaysia Map</title>
+    <title>Food Story Map</title>
     <link rel="stylesheet" href="Map.css">
     <link rel="stylesheet" href="NavBar.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
