--- a/Main/MapRecipe.html
+++ b/Main/MapRecipe.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Malaysia Map</title>
+    <title>Recipe Map</title>
     <link rel="stylesheet" href="Map.css">
     <link rel="stylesheet" href="NavBar.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
@@ -310,7 +310,7 @@
     </nav>
 
     <div id="map-container">
-        <h1 class="font-effect-fire" id="map-title">RECIPE MAP</h1>
+        <h1 class="font-effect-fire" id="map-title">RECIPES</h1>
         <p id="map-subtitle">CLICK ON THE STATES BELOW FOR DETAILS</p>
         <div id="map"></div>
     </div>
